Finished every test (integration, mock and db) & Implemented 2 more routes
